--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tyler Crabtree (tcrabtree - GitHub)",
+  "author": "Tyler Crabtree (tcrabtreee - GitHub)",
   "license": "ISC"
 }
